# voiceai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  package.json
.claude/: launch.json
apps/api/: .env.example  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/app/: main.py
apps/api/app/api/v1/: analytics.py  api_keys.py  auth.py  conversations.py  memory.py  router.py  tools.py  workspaces.py
apps/api/app/core/: config.py  database.py  dependencies.py  redis_client.py  security.py
apps/api/app/mcp/: base_integration.py  calendar_integration.py  gmail_integration.py  schemas.py  slack_integration.py
apps/api/app/models/: __init__.py  analytics.py  api_key.py  conversation.py  memory.py  summary.py  tool.py  user.py  workspace.py
apps/api/app/realtime/: audio_pipeline.py  azure_openai_provider.py  base_provider.py  gateway.py  gemini_provider.py  openai_provider.py  protocol.py  session_manager.py
apps/api/app/schemas/: analytics.py  api_key.py  auth.py  conversation.py  memory.py  session.py  tool.py  workspace.py
apps/api/app/services/: analytics_service.py  byok_service.py  context_service.py  embedding_service.py  mcp_service.py  memory_service.py  summarization_service.py
apps/api/app/workers/: celery_app.py  memory_worker.py  post_call_worker.py
apps/api/tests/: conftest.py  test_auth.py  test_context.py  test_mcp.py  test_memory.py
scripts/: generate-keys.py  seed-demo.py  (+1 more)
(+127 files in other folders)
